--- a/package.json
+++ b/package.json
@@ -3,27 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.0",
-    "@mui/x-date-pickers": "5.0.0-alpha.3",
-    "@mui/x-date-pickers-pro": "5.0.0-alpha.3",
-    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "date-fns": "2.28.0",
+    "axios": "^0.27.2",
+    "framer-motion": "^6.3.3",
+    "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-date-picker": "^8.4.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^8.0.1",
-    "react-router": "^6.3.0",
+    "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-test-renderer": "^18.1.0",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,7 +49,6 @@
     "@babel/core": "^7.18.0",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-syntax-jsx": "^7.17.12",
-    "@babel/preset-env": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
